--- a/ManageStudy/src/View/MenuView.fxml
+++ b/ManageStudy/src/View/MenuView.fxml
@@ -2,10 +2,12 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
 <?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.SplitMenuButton?>
+<?import javafx.scene.control.SplitPane?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
@@ -14,64 +16,87 @@
 
 <AnchorPane maxHeight="-Infinity" maxWidth="1026.0" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="786.0" xmlns="http://javafx.com/javafx/8.0.191" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.MenuController">
    <children>
+      <Label fx:id="txtNotice" layoutX="13.0" layoutY="378.0" prefHeight="17.0" prefWidth="246.0" AnchorPane.bottomAnchor="5.0" AnchorPane.leftAnchor="13.0" />
       <MenuBar prefHeight="25.0" prefWidth="600.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
         <menus>
           <Menu mnemonicParsing="false" text="File">
             <items>
-              <MenuItem mnemonicParsing="false" text="Close" />
+                  <MenuItem mnemonicParsing="false" onAction="#LoadDatabase" text="Load Database" />
+                  <MenuItem mnemonicParsing="false" onAction="#NewXML" text="New XML" />
+                  <MenuItem mnemonicParsing="false" onAction="#OpenXML" text="Open XML" />
+                  <MenuItem mnemonicParsing="false" onAction="#SaveXML" text="Save XML" />
+                  <MenuItem mnemonicParsing="false" onAction="#SaveAsXML" text="Save as XML" />
+                  <MenuItem mnemonicParsing="false" onAction="#MenuExit" text="Exit" />
             </items>
           </Menu>
           <Menu mnemonicParsing="false" text="Edit">
             <items>
-              <MenuItem mnemonicParsing="false" text="Delete" />
+                  <MenuItem mnemonicParsing="false" onAction="#WorkWithDatabase" text="Database" />
+                  <MenuItem mnemonicParsing="false" onAction="#WorkWithXML" text="XML" />
             </items>
           </Menu>
           <Menu mnemonicParsing="false" text="Help">
             <items>
-              <MenuItem mnemonicParsing="false" text="About" />
+              <MenuItem mnemonicParsing="false" onAction="#ShowAbout" text="About" />
             </items>
           </Menu>
         </menus>
       </MenuBar>
-      <VBox layoutX="677.0" layoutY="25.0" prefHeight="376.0" prefWidth="109.0" spacing="10.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="677.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="24.0">
-         <children>
-            <SplitMenuButton mnemonicParsing="false" text="Search">
-              <items>
-                <MenuItem mnemonicParsing="false" text="Action 1" />
-                <MenuItem mnemonicParsing="false" text="Action 2" />
-              </items>
-            </SplitMenuButton>
-            <TextField maxWidth="200.0">
-               <VBox.margin>
-                  <Insets top="-10.0" />
-               </VBox.margin>
-            </TextField>
-            <Button fx:id="btninsert" maxWidth="100.0" mnemonicParsing="false" onAction="#InsertStudent" prefHeight="25.0" prefWidth="98.0" text="Insert">
-               <VBox.margin>
-                  <Insets />
-               </VBox.margin></Button>
-            <Button fx:id="btnupdate" maxWidth="100.0" mnemonicParsing="false" onAction="#UpdateStudent" prefHeight="25.0" prefWidth="98.0" text="Update" />
-            <Button fx:id="btndelete" maxWidth="100.0" mnemonicParsing="false" onAction="#DeleteStudent" prefHeight="25.0" prefWidth="98.0" text="Delete" />
-         </children>
-         <padding>
-            <Insets left="10.0" right="10.0" top="10.0" />
-         </padding>
-      </VBox>
-      <TableView fx:id="StudentTable" layoutY="25.0" prefHeight="376.0" prefWidth="676.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="110.0" AnchorPane.topAnchor="24.0">
-        <columns>
-          <TableColumn fx:id="IDCol" prefWidth="82.0" text="ID" />
-          <TableColumn prefWidth="195.0" text="Full Name">
-               <columns>
-                  <TableColumn fx:id="FirstNameCol" prefWidth="75.0" text="First Name" />
-                  <TableColumn fx:id="LastNameCol" prefWidth="75.0" text="Last Name" />
-               </columns>
-            </TableColumn>
-            <TableColumn fx:id="ClassNameCol" minWidth="0.0" prefWidth="52.0" text="Class" />
-            <TableColumn fx:id="BirthdayCol" prefWidth="118.0" text="Birthday" />
-            <TableColumn fx:id="AddressCol" prefWidth="121.0" text="Address" />
-            <TableColumn fx:id="GenderCol" prefWidth="57.0" text="Gender" />
-            <TableColumn fx:id="NumberPhoneCol" prefWidth="95.0" text="Phone" />
-        </columns>
-      </TableView>
+      <SplitPane dividerPositions="0.8125" prefHeight="160.0" prefWidth="786.0" AnchorPane.bottomAnchor="24.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="24.0">
+        <items>
+          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
+               <children>
+                  <TableView fx:id="StudentTable" layoutX="36.0" layoutY="12.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                    <columns>
+                      <TableColumn fx:id="IDCol" prefWidth="82.0" text="ID" />
+                      <TableColumn prefWidth="195.0" text="Full Name">
+                           <columns>
+                              <TableColumn fx:id="FirstNameCol" prefWidth="75.0" text="First Name" />
+                              <TableColumn fx:id="LastNameCol" prefWidth="75.0" text="Last Name" />
+                           </columns>
+                        </TableColumn>
+                        <TableColumn fx:id="ClassNameCol" minWidth="0.0" prefWidth="52.0" text="Class" />
+                        <TableColumn fx:id="BirthdayCol" prefWidth="118.0" text="Birthday" />
+                        <TableColumn fx:id="AddressCol" prefWidth="121.0" text="Address" />
+                        <TableColumn fx:id="GenderCol" prefWidth="57.0" text="Gender" />
+                        <TableColumn fx:id="NumberPhoneCol" prefWidth="95.0" text="Phone" />
+                    </columns>
+                     <columnResizePolicy>
+                        <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+                     </columnResizePolicy>
+                  </TableView>
+               </children>
+            </AnchorPane>
+          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
+               <children>
+                  <VBox layoutX="93.0" layoutY="-93.0" spacing="10.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                     <children>
+                        <SplitMenuButton mnemonicParsing="false" text="Search">
+                          <items>
+                            <MenuItem mnemonicParsing="false" text="Action 1" />
+                            <MenuItem mnemonicParsing="false" text="Action 2" />
+                          </items>
+                        </SplitMenuButton>
+                        <TextField maxWidth="200.0">
+                           <VBox.margin>
+                              <Insets top="-10.0" />
+                           </VBox.margin>
+                        </TextField>
+                        <Button fx:id="btninsert" maxWidth="136.0" mnemonicParsing="false" onAction="#InsertStudent" prefHeight="25.0" prefWidth="136.0" text="Insert">
+                           <VBox.margin>
+                              <Insets />
+                           </VBox.margin>
+                        </Button>
+                        <Button fx:id="btnupdate" maxWidth="145.0" mnemonicParsing="false" onAction="#UpdateStudent" prefHeight="25.0" prefWidth="145.0" text="Update" />
+                        <Button fx:id="btndelete" maxWidth="146.0" mnemonicParsing="false" onAction="#DeleteStudent" prefHeight="25.0" prefWidth="146.0" text="Delete" />
+                     </children>
+                     <padding>
+                        <Insets left="10.0" right="10.0" top="10.0" />
+                     </padding>
+                  </VBox>
+               </children>
+            </AnchorPane>
+        </items>
+      </SplitPane>
    </children>
 </AnchorPane>
